<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#33000000"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        >

        <ImageButton
            android:id="@+id/more_setting_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/back_blue"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MoreSetting"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usefulSetting"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/volumePage"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/more_setting_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_marginTop="1dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/screenPage"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/more_setting_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/pageMode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        >
        <RadioGroup
            android:id="@+id/more_setting_pageMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <RadioButton
                android:id="@+id/more_setting_mode1"
                style="@style/SettingItemsTheme"
                android:text="@string/mode1"
                android:background="@drawable/more_setting_page_selector"
                android:gravity="center"
                />
            <RadioButton
                android:id="@+id/more_setting_mode2"
                style="@style/SettingItemsTheme"
                android:text="@string/mode2"
                android:background="@drawable/more_setting_page_selector"
                android:gravity="center"
                />
            <RadioButton
                android:id="@+id/more_setting_mode4"
                style="@style/SettingItemsTheme"
                android:text="@string/mode4"
                android:background="@drawable/more_setting_page_selector"
                android:gravity="center"
                />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
